refactor(repository): eliminar scan() y usar GSI1 (gIndex2Pk + keywordSearch) en client y merchant